@startuml

class Users {
    +id : UUID
    +email : VARCHAR(255)
    +username : VARCHAR(50)
    +password : VARCHAR(255)
    +email_verified : BOOLEAN
    +two_factor_enabled : BOOLEAN
    +reset_token : VARCHAR(255)
    +reset_token_expires : BIGINT
    +is_google_account : BOOLEAN
}

class Themes {
    +id : SERIAL
    +name : VARCHAR(255)
    +description : TEXT
}

class Categories {
    +id : SERIAL
    +name : VARCHAR(255)
    +description : TEXT
    +theme_id : INTEGER
}

class Subjects {
    +id : SERIAL
    +name : VARCHAR(255)
    +description : TEXT
    +user_id : UUID
}

class Questions {
    +id : SERIAL
    +subject_id : INTEGER
    +level : FLOAT
    +statement : TEXT
    +hint : TEXT
    +question_comment : TEXT
    +answer : TEXT
    +explanation : TEXT
    +answer_comment : TEXT
    +answer_source : TEXT
    +origin_source : TEXT
    +author_id : UUID
}

class SubjectCategories {
    +subject_id : INTEGER
    +category_id : INTEGER
}

Users "1" -- "*" Subjects : "create"
Themes "1" -- "*" Categories : "contains"
Subjects "1" -- "*" Questions : "has"
Subjects "*" -- "*" Categories : "belongs to" 

@enduml
